--- a/app/views/mailers/mailshots_mailer/community_launch.text.erb
+++ b/app/views/mailers/mailshots_mailer/community_launch.text.erb
@@ -20,7 +20,7 @@ Check out the blog post for more details: https://exercism.org/blog/dig-deeper
 
 🤖 Deeper Automated Feedback
 
-Earlier this month we launched our biggest step in automation so far. Our new Representation system mean that mentors' feedback will now be automatically given to see people who submit similar solutions in the future. You should now see more accurate automated feedback more frequently across a wider range of exercises.
+Earlier this month we launched our biggest step in automation so far. Our new Representation system means that mentors' feedback will now be automatically given to people who submit similar solutions in the future. You should now see more accurate automated feedback more frequently across a wider range of exercises.
 
 Check out the blog post for more details: https://exercism.org/blog/representers
 
