--- a/app/views/mailers/mailshots_mailer/community_launch.html.erb
+++ b/app/views/mailers/mailshots_mailer/community_launch.html.erb
@@ -501,7 +501,7 @@ div.preheader {
         <div class="layout one-col fixed-width stack" style="margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
           <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;background-color: #ffffff;">
           <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0" role="presentation"><tr class="layout-fixed-width" style="background-color: #ffffff;"><td style="width: 600px" class="w560"><![endif]-->
-            <div class="column" style="text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Georgia,sans-serif;">
+            <div class="column" style="text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif;">
 
               <div style="margin-left: 20px;margin-right: 20px;">
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
@@ -514,7 +514,7 @@ div.preheader {
                     Come and say hello!
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    <a href="https://exercism.org/blog/dig-deeper" style="font-weight:600; font-size:17px; color:#2E57E8; text-decoration: none">💡 Dig Deeper tabs</a>
+                    <a href="https://exercism.org/blog/dig-deeper" style="font-weight:600; font-size:17px; color:#2E57E8; text-decoration: none">💡 Dig Deeper section</a>
                     — 
                     Solving an exercise on Exercism is just the start. 
                     The real magic comes afterwards - working with mentors, exploring others solutions, and now with our new Dig Deeper tab, exploring the different approaches and tradeoffs that people take when solving that exercise.
@@ -575,14 +575,14 @@ div.preheader {
                   <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;">
                   <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0" role="presentation"><tr><td style="width: 290px" valign="top" class="w250"><![endif]-->
 
-                    <div class="column" style="text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Georgia,sans-serif;">
+                    <div class="column" style="text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif;">
                       <table class="column__background" style="border-collapse: collapse;table-layout: fixed;background-color: #ffffff;" cellpadding="0" cellspacing="0" width="100%" role="presentation">
                         <tbody><tr>
-                          <td style="text-align: left;text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Georgia,sans-serif">
+                          <td style="text-align: left;text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif">
 
                             <div style="margin-left: 20px;margin-right: 20px;margin-top: 24px;">
                               <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
-                                <h2 style="margin-top: 0;margin-bottom: 16px;font-style: normal;font-weight: normal;text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Georgia,sans-serif;font-weight:600">Why am I receiving this?</h2>
+                                <h2 style="margin-top: 0;margin-bottom: 16px;font-style: normal;font-weight: normal;text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif;font-weight:600">Why am I receiving this?</h2>
                               </div>
                             </div>
 
