Further mailshot tweaks

--- a/app/views/mailers/mailshots_mailer/community_launch.html.erb
+++ b/app/views/mailers/mailshots_mailer/community_launch.html.erb
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width"/>
 
 <style type="text/css">
-@media only screen and (min-width: 620px){.wrapper{min-width:600px !important}.wrapper h1{}.wrapper h1{font-size:22px !important;line-height:31px !important}.wrapper h2{}.wrapper h3{}.column{}.wrapper .size-8{font-size:8px !important;line-height:15px !important}.wrapper .size-9{font-size:9px !important;line-height:16px !important}.wrapper .size-10{font-size:10px !important;line-height:18px !important}.wrapper .size-11{font-size:11px !important;line-height:19px !important}.wrapper .size-12{font-size:12px !important;line-height:19px !important}.wrapper .size-13{font-size:13px !important;line-height:21px !important}.wrapper .size-14{font-size:15px !important;line-height:21px !important}.wrapper .size-15{font-size:15px !important;line-height:23px !important}.wrapper .size-16{font-size:16px !important;line-height:24px !important}.wrapper .size-17{font-size:17px !important;line-height:26px
+@media only screen and (min-width: 620px){.wrapper{min-width:600px !important}.wrapper h1{}.wrapper h1{font-size:22px !important;line-height:31px !important}.wrapper h2{}.wrapper h3{}.column{}.wrapper .size-8{font-size:8px !important;line-height:16px !important}.wrapper .size-9{font-size:9px !important;line-height:16px !important}.wrapper .size-10{font-size:10px !important;line-height:18px !important}.wrapper .size-11{font-size:11px !important;line-height:19px !important}.wrapper .size-12{font-size:12px !important;line-height:19px !important}.wrapper .size-13{font-size:13px !important;line-height:21px !important}.wrapper .size-14{font-size:16px !important;line-height:21px !important}.wrapper .size-15{font-size:16px !important;line-height:23px !important}.wrapper .size-16{font-size:16px !important;line-height:24px !important}.wrapper .size-17{font-size:17px !important;line-height:26px
 !important}.wrapper .size-18{font-size:18px !important;line-height:26px !important}.wrapper .size-20{font-size:20px !important;line-height:28px !important}.wrapper .size-22{font-size:22px !important;line-height:31px !important}.wrapper .size-24{font-size:24px !important;line-height:32px !important}.wrapper .size-26{font-size:26px !important;line-height:34px !important}.wrapper .size-28{font-size:28px !important;line-height:36px !important}.wrapper .size-30{font-size:30px !important;line-height:38px !important}.wrapper .size-32{font-size:32px !important;line-height:40px !important}.wrapper .size-34{font-size:34px !important;line-height:43px !important}.wrapper .size-36{font-size:36px !important;line-height:43px !important}.wrapper .size-40{font-size:40px !important;line-height:47px !important}.wrapper .size-44{font-size:44px !important;line-height:50px !important}.wrapper
 .size-48{font-size:48px !important;line-height:54px !important}.wrapper .size-56{font-size:56px !important;line-height:60px !important}.wrapper .size-64{font-size:64px !important;line-height:63px !important}}
 </style>
@@ -342,7 +342,7 @@ div.preheader {
 .mso .size-8,
 .ie .size-8 {
   font-size: 8px !important;
-  line-height: 15px !important;
+  line-height: 16px !important;
 }
 .mso .size-9,
 .ie .size-9 {
@@ -371,12 +371,12 @@ div.preheader {
 }
 .mso .size-14,
 .ie .size-14 {
-  font-size: 15px !important;
+  font-size: 16px !important;
   line-height: 21px !important;
 }
 .mso .size-15,
 .ie .size-15 {
-  font-size: 15px !important;
+  font-size: 16px !important;
   line-height: 23px !important;
 }
 .mso .size-16,
@@ -474,7 +474,7 @@ div.preheader {
 <!--<![endif]-->
 
 <style type="text/css">
-  .main,.mso{background-color:#f6f6f8}.logo a:hover,.logo a:focus{color:#0d1012 !important}.footer-logo a:hover,.footer-logo a:focus{color:#372d1b !important}.mso .layout-has-border{border-top:1px solid #bdbdcb;border-bottom:1px solid #bdbdcb}.mso .layout-has-bottom-border{border-bottom:1px solid #bdbdcb}.mso .border,.ie .border{background-color:#bdbdcb}.mso h1,.ie h1{}.mso h1,.ie h1{font-size:22px !important;line-height:31px !important}.mso h2,.ie h2{}.mso h3,.ie h3{}.mso .layout__inner,.ie .layout__inner{}.mso .footer__share-button p{}.mso .footer__share-button p{font-family:Ubuntu,sans-serif}
+  .main,.mso{background-color:#fff}.logo a:hover,.logo a:focus{color:#0d1012 !important}.footer-logo a:hover,.footer-logo a:focus{color:#372d1b !important}.mso .layout-has-border{border-top:1px solid #bdbdcb;border-bottom:1px solid #bdbdcb}.mso .layout-has-bottom-border{border-bottom:1px solid #bdbdcb}.mso .border,.ie .border{background-color:#bdbdcb}.mso h1,.ie h1{}.mso h1,.ie h1{font-size:22px !important;line-height:31px !important}.mso h2,.ie h2{}.mso h3,.ie h3{}.mso .layout__inner,.ie .layout__inner{}.mso .footer__share-button p{}.mso .footer__share-button p{font-family:Ubuntu,sans-serif}
 </style>
 
 <meta name="robots" content="noindex,nofollow"/>
@@ -487,7 +487,7 @@ div.preheader {
 <!--[if !mso]><!-->
   <body class="main full-padding" style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;">
 <!--<![endif]-->
-    <table class="wrapper" style="border-collapse: collapse;table-layout: fixed;min-width: 320px;width: 100%;background-color: #f6f6f8;" cellpadding="0" cellspacing="0" role="presentation"><tbody><tr><td>
+    <table class="wrapper" style="border-collapse: collapse;table-layout: fixed;min-width: 320px;width: 100%;background-color: #fff;" cellpadding="0" cellspacing="0" role="presentation"><tbody><tr><td>
       <div role="banner">
         <div class="header" style="margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);" id="emb-email-header-container">
         <!--[if (mso)|(IE)]><table align="center" class="header" cellpadding="0" cellspacing="0" role="presentation"><tr><td style="width: 600px"><![endif]-->
@@ -501,7 +501,7 @@ div.preheader {
         <div class="layout one-col fixed-width stack" style="margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
           <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;background-color: #ffffff;">
           <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0" role="presentation"><tr class="layout-fixed-width" style="background-color: #ffffff;"><td style="width: 600px" class="w560"><![endif]-->
-            <div class="column" style="text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif;">
+            <div class="column" style="text-align: left;color: #130B43;font-size: 16px;line-height: 25px;font-family: Poppins,Arial,'Helvetica Neue',Helvetica,sans-serif;">
 
               <div style="margin-left: 20px;margin-right: 20px;">
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
@@ -555,7 +555,7 @@ div.preheader {
 
               <div style="margin-left: 20px;margin-right: 20px;">
                 <div class="btn btn--shadow btn--large" style="margin-bottom: 20px;">
-                  <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 15px;font-weight: bold;line-height: 24px;padding: 12px 24px 13px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #2e57e8;font-family: Poppins, Trebuchet MS, Avenir, Segoe UI, sans-serif;" href="https://exercism.org">
+                  <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 16px;font-weight: bold;line-height: 24px;padding: 12px 24px 13px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #2e57e8;font-family: Poppins, Trebuchet MS, Avenir, Segoe UI, sans-serif;" href="https://exercism.org">
                     EXPLORE EXERCISM 
                     <span style="font-size:20px;margin-left:5px">➡</span>
                   </a><![endif]>
@@ -575,14 +575,14 @@ div.preheader {
                   <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;">
                   <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0" role="presentation"><tr><td style="width: 290px" valign="top" class="w250"><![endif]-->
 
-                    <div class="column" style="text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif;">
+                    <div class="column" style="text-align: left;color: #130B43;font-size: 16px;line-height: 25px;font-family: Poppins,Arial,'Helvetica Neue',Helvetica,sans-serif;">
                       <table class="column__background" style="border-collapse: collapse;table-layout: fixed;background-color: #ffffff;" cellpadding="0" cellspacing="0" width="100%" role="presentation">
                         <tbody><tr>
-                          <td style="text-align: left;text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif">
+                          <td style="text-align: left;text-align: left;color: #130B43;font-size: 16px;line-height: 25px;font-family: Poppins,Arial,'Helvetica Neue',Helvetica,sans-serif">
 
                             <div style="margin-left: 20px;margin-right: 20px;margin-top: 24px;">
                               <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
-                                <h2 style="margin-top: 0;margin-bottom: 16px;font-style: normal;font-weight: normal;text-align: left;color: #130B43;font-size: 15px;line-height: 25px;font-family: Poppins,Helvetica,sans-serif;font-weight:600">Why am I receiving this?</h2>
+                                <h2 style="margin-top: 0;margin-bottom: 16px;font-style: normal;font-weight: normal;text-align: left;color: #130B43;font-size: 16px;line-height: 25px;font-family: Poppins,Arial,'Helvetica Neue',Helvetica,sans-serif;font-weight:600">Why am I receiving this?</h2>
                               </div>
                             </div>
 
