--- a/app/views/mailers/mailshots_mailer/community_launch.html.erb
+++ b/app/views/mailers/mailshots_mailer/community_launch.html.erb
@@ -506,18 +506,18 @@ div.preheader {
               <div style="margin-left: 20px;margin-right: 20px;">
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
-                  <p style="margin-top: 20px;margin-bottom: 0;">It's been a year since we launched the new version of <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org"><span style="color:#2e57e8">Exercism</span></a>, and what an exciting year it's been! We've now helped over 1M people improve their coding skills, mentored over 300,000 people and gratefully received over $30,000 in donations. In the last few weeks, we've also launched new big features that we're really excited by!</p>
+                  <p style="margin-top: 20px;margin-bottom: 0;">It's been a year since we launched the new version of <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org"><span style="color:#2e57e8">Exercism</span></a>, and what a year it's been! We've now helped over 1M people improve their coding skills, mentored over 300k people and gratefully received over $30k in donations. In the last few weeks we've also launched some big new features that I thought you might like to hear about.</p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    <a href="https://forum.exercism.org" style="font-weight:600; font-size:17px; color:#2E57E8; text-decoration: none">💬 The new Exercism Forum</a>
+                    <a href="https://forum.exercism.org" style="font-weight:600; font-size:17px; color:#2E57E8; text-decoration: none">💬 The Exercism Forum</a>
                     — 
-                    Our new forum is the place to share your programming journey with others, pick their brains when you get stuck, discussion new languages or concepts you discover, and to hang out with other similar-minded people.
+                    Our new forum is the place to share your programming journey with others, pick their brains when you get stuck, discuss new languages or concepts you discover, and <strong style="font-weight:600">hang out with other like-minded people.</strong>
                     Come and say hello!
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     <a href="https://exercism.org/blog/dig-deeper" style="font-weight:600; font-size:17px; color:#2E57E8; text-decoration: none">💡 Dig Deeper section</a>
                     — 
                     Solving an exercise on Exercism is just the start. 
-                    The real magic comes afterwards - working with mentors, exploring others solutions, and now with our new Dig Deeper tab, exploring the different approaches and tradeoffs that people take when solving that exercise.
+                    The real magic comes afterwards - working with mentors, exploring others solutions, and now with our new Dig Deeper tab, <strong style="font-weight:600">exploring the different approaches and tradeoffs</strong> that people take when solving that exercise.
                     Check out the blog post for more details!
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
@@ -525,30 +525,30 @@ div.preheader {
                     — 
                     Earlier this month we launched our biggest step in automation so far.
                     Our new Representation system mean that mentors' feedback will now be automatically given to see people who submit similar solutions in the future.
-                    You should now see more accurate automated feedback more frequently across a wider range of exercises.
+                    You should now see <strong style="font-weight:600">more accurate automated feedback more frequently</strong> across a wider range of exercises.
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     <a href="https://swag.exercism.org" style="font-weight:600; font-size:17px; color:#2E57E8; text-decoration: none">👕 Swag Store</a>
                     — 
                     Since Exercism started, people have been requesting swag. Well it's finally here!
-                    T-shirts, mugs, mousemats, jigsaws and more. And we've priced everything at cost so as many people as possible can access it. So come get (geek-)stylish, with some Exercism swag 🙂
+                    <strong style="font-weight:600">T-shirts, mugs, mousemats, jigsaws and more</strong>. And we've priced everything at cost so as many people as possible can access it. So come get [geek-]stylish, with some Exercism swag 🙂
                   </p>
 
-
                   <p style="margin-top: 20px;margin-bottom: 20px;">
-                    Exercism is only possible thanks to the time that our community put in and the donations that keep us afloat. 
-                    If you find Exercism useful or just support our mission to bring world-class programming education to everyone, please consider 
-                    <a href="https://exercism.org/donate" style="font-weight:600; color:#2E57E8;">donating to us</a>. 
+                    Exercism is only possible thanks to the time and money that our community donate. 
+                    If you find Exercism useful or simply support our mission to bring world-class programming education to everyone, please consider 
+                    <a href="https://exercism.org/donate" style="font-weight:600; color:#2E57E8;">supporting us via a donation</a>. 
                     If you've already donated or given your time to help others at Exercism, thank you 💙
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 20px;">
-                    We've got a really exciting 12 months ahead with lots of improvements and new features planned, as well as a new site dedicate to Learning to Code for total beginners, and the reintroduction of Exercism Teams. 
-                    So keep an eye out for those things and until then, enjoy the platform!
+                    We've got a really exciting 12 months ahead with lots of improvements and new features planned, as well as a new site dedicated to learning to code for total beginners, and the reintroduction of Exercism Teams. 
+                    So keep an eye out for those things and until then, enjoy Exercism!
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 20px;">
 
-                    <p style="margin-top: 0;margin-bottom: 0;">Kind regards,<br/>
-                    Jeremy Walker, CEO of Exercism</p>
+                    <p style="margin-top: 0;margin-bottom: 0;">Thanks for reading,<br/>
+                    Jeremy Walker<br/>
+                    CEO of Exercism</p>
                   </p>
                 </div>
               </div>
