--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,3 +1,5 @@
+-# %meta{ "http-equiv": "Content-Security-Policy", content: csp_policy}
+
 %link{ rel: "preconnect", href: "https://fonts.googleapis.com" }
 %link{ rel: "preconnect", href: "https://fonts.gstatic.com", crossorigin: true }
 %link{ rel: "preconnect", href: Exercism.config.website_assets_host, crossorigin: true }
