--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -179,13 +179,28 @@ body.devise {
         & li.site-link {
             @apply xl:hidden;
         }
+
+        & li.new {
+            & a:after {
+                /* text-14px + pt-6 + pb-6 */
+                height: 26px;
+                content: "New";
+                background-image: url("icons/sparkle-warning.svg");
+                background-size: 12px;
+                background-repeat: no-repeat;
+                background-position: 8px center;
+                /* most of this is copied from site_header.rb L70 */
+                /* pl-24 = pl-8 + bg-size 12px + mr-4 */
+                @apply ml-8 text-warning bg-lightOrange py-6 pr-8 pl-24 rounded-100 font-semibold text-[13px] flex items-center;
+            }
+        }
+
         & li.opt {
             & a {
-                @apply flex;
+                @apply flex items-center;
                 @apply text-textColor6 font-medium;
                 @apply text-16 leading-huge;
-                @apply bg-backgroundColorA;
-
+                @apply bg-transparent;
                 &:hover {
                     @apply bg-backgroundColorD;
                     @apply text-textColor5;
