Replace link to kytrinyx.com
I don't have a personal website anymore.
I have a very simple resume page up on github apps, though.
Let's link to that.

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -43,12 +43,12 @@
             = image_tag "team/katrina.jpg", alt: "An image of Katrina", class: "avatar"
             .details
               %h3
-                = link_to "Katrina Owen", "https://kytrinyx.com", target: "_blank", rel: 'noopener'
+                = link_to "Katrina Owen", "https://exercism.github.io/kytrinyx/", target: "_blank", rel: 'noopener'
               .handle Co-founder &amp; Director
               %p Katrina is the original creator of Exercism. She is co-author of #{link_to '99 Bottles of OOP', 'https://sandimetz.com/99bottles'}. Polyglot developer and Ruby Hero award winner, with a degree in Molecular Biology. Cares deeply about open-source and contributes to several projects outside of Exercism.
               %ul.links
                 %li
-                  = link_to "https://kytrinyx.com", target: "_blank", rel: 'noopener' do
+                  = link_to "https://exercism.github.io/kytrinyx/", target: "_blank", rel: 'noopener' do
                     = graphical_icon "link"
                     %span Katrina's Personal Site
 
