--- a/app/views/components/footer/shared.html.haml
+++ b/app/views/components/footer/shared.html.haml
@@ -96,6 +96,6 @@
     .company.mb-16.md:mb-0.md:mr-32
       Exercism is not-for-profit organisation registered in the UK with company number
       #{link_to '11733062', 'https://find-and-update.company-information.service.gov.uk/company/11733062'}.
-      Its trustees are #{link_to 'Katrina Owen', 'https://www.kytrinyx.com/'} and #{link_to 'Jeremy Walker', 'https://ihid.info/'}.
+      Its trustees are #{link_to 'Katrina Owen', 'https://exercism.github.io/kytrinyx/'} and #{link_to 'Jeremy Walker', 'https://ihid.info/'}.
     .copyright.md:ml-auto
       © #{Date.current.year} Exercism
