--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -318,8 +318,8 @@
 
         .record-value {
             @apply text-label-timestamp font-semibold;
-            span {
-                @apply ml-16;
+            span:not(:last-child) {
+                @apply mr-16;
             }
         }
     }
