--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -318,6 +318,9 @@
 
         .record-value {
             @apply text-label-timestamp font-semibold;
+            span:not(:last-child) {
+                @apply mr-16;
+            }
         }
     }
 
