--- a/app/css/ui-kit/borders.css
+++ b/app/css/ui-kit/borders.css
@@ -23,4 +23,12 @@
         background-origin: border-box;
         background-clip: padding-box, border-box;
     }
+    .border-gradient-lightPurple {
+        border-style: solid;
+        border-color: transparent;
+        background-image: linear-gradient(#fafaff, #fafaff),
+            linear-gradient(#2200ff, #9e00ff);
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
+    }
 }
