--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -20,13 +20,31 @@
         filter: var(--orange-filter);
     }
 
+    /* I don't think we need duplicates of all the filters - 
+    one here, one in colors.css, or do we? */
     .filter-lightBlue {
         filter: invert(25%) sepia(55%) saturate(3687%) hue-rotate(223deg)
             brightness(94%) contrast(93%);
     }
 
+    .filter-textColor1 {
+        filter: invert(10%) sepia(35%) saturate(3157%) hue-rotate(231deg)
+            brightness(99%) contrast(113%);
+    }
+
+    .filter-healthyGreen {
+        filter: invert(57%) sepia(64%) saturate(5598%) hue-rotate(92deg)
+            brightness(99%) contrast(111%);
+    }
+
     .filter-warning {
-        filter: invert(66%) sepia(97%) saturate(2953%) hue-rotate(4deg)
-            brightness(92%) contrast(103%);
+        filter: invert(67%) sepia(54%) saturate(5119%) hue-rotate(8deg)
+            brightness(98%) contrast(101%);
+    }
+
+    .filter-danger {
+        /* this is loss 2.8% */
+        filter: invert(53%) sepia(16%) saturate(4455%) hue-rotate(323deg)
+            brightness(84%) contrast(103%);
     }
 }
