--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -11,7 +11,7 @@
       = graphical_icon "report", css_class: 'h-[26px] w-[26px] filter-textColor6 mr-16'
       Exercism Impact Report
     %h2.text-h0.mb-12.text-center{ class: 'max-w-[800px]' }
-      We’ve provided
+      We&apos;ve provided
       %strong{ class: 'pl-8 pr-12 font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]' } 104,220,130
       %strong{ class: 'pl-8 pr-8 mr-[-8px] font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]' } minutes
       of free education.
@@ -49,7 +49,7 @@
 
       .shadow-lg.flex-grow.bg-white.rounded-16.py-48.px-24.relative
         .absolute.w-full.shadow-sm.text-h5.py-6.px-16.rounded-24.bg-white.flex.flex-row.items-center.whitespace-nowrap{ class: 'top-0 left-1/2 -translate-y-1/2 -translate-x-1/2' }
-          = graphical_icon "graph-stats", css_class: 'h-[24px] w-[24px] mr-12'
+          = graphical_icon "graph-stats-gradient", css_class: 'h-[24px] w-[24px] mr-12'
           Live activity on Exercism
         = ReactComponents::Impact::Map.new
 
@@ -165,7 +165,7 @@
       .text-48.leading-130.mb-8 🚀
       %h2.text-h1.mb-12 Become rocket fuel for our mission
       %p.text-p-2xlarge.mb-36.text-center.text-textColor6.font-medium
-        We’ve built everything for under $500,000. Imagine what we could do with
+        We&apos;ve built everything for under $500,000. Imagine what we could do with
         more significant funding! Could you be the one to make it happen?
       .flex.flex-col.border.border-2.border-gradient.rounded-16.px-40.py-24.shadow-smZ1
         .flex.flex-col.items-center.mx-auto.mb-24.md:flex-row
