--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -21,7 +21,7 @@
           %span.text-textColor6
             Published at
             = format_date(@approach.created_at)
-  .xs-container.mb-32.md:mb-48
+  .md-container.mb-32.md:mb-48
     %article.shadow-lgZ1.bg-backgroundColorA.rounded-8
       .share-bar.border-b-1.border-borderColor6.py-12.md:py-16.px-24.md:px-32.flex.items-center
         = graphical_icon "lightbulb", category: :graphics, css_class: "main-graphic hidden md:block"
