--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -185,10 +185,7 @@ body.devise {
                 /* text-14px + pt-6 + pb-6 */
                 height: 26px;
                 content: "New";
-                background-image: url("icons/sparkle-warning.svg");
-                background-size: 12px;
-                background-repeat: no-repeat;
-                background-position: 8px center;
+                @apply bg-[url("icons/sparkle-warning.svg")] bg-[length:12px] bg-no-repeat bg-[8px_center];
                 /* most of this is copied from site_header.rb L70 */
                 /* pl-24 = pl-8 + bg-size 12px + mr-4 */
                 @apply ml-8 text-warning bg-lightOrange py-6 pr-8 pl-24 rounded-100 font-semibold text-[13px] flex items-center;
