--- a/app/css/components/blog-post.css
+++ b/app/css/components/blog-post.css
@@ -1,14 +1,11 @@
 @import "../styles";
 
 .c-blog-post {
-    @apply block p-16 rounded-8 shadow-base;
+    @apply block p-16 rounded-8 shadow-base bg-white;
     & .img {
         height: 150px;
         @apply mb-12 rounded-8;
-        background: lightgray; /* TODO: REMOVE */
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
+        @apply bg-no-repeat bg-cover bg-center;
     }
     & .new {
         @apply bg-lightGold text-unnamed13 font-mono text-12 leading-paragraph;
