--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -285,6 +285,12 @@
         @apply w-1-2;
     }
 
+    .sticky {
+        .record-element {
+            @apply bg-white;
+        }
+    }
+
     .record-row {
         @apply flex justify-between lg:items-center;
         @apply lg:flex-row flex-col;
