--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -286,8 +286,17 @@
     }
 
     .sticky {
+        .record-name {
+            @apply mb-0;
+        }
         .record-element {
-            @apply bg-white;
+            @apply bg-white items-center;
+        }
+    }
+
+    .record-value {
+        strong {
+            @apply mt-8 xl:mt-0;
         }
     }
 
