Track dashboard UI tweaks (#3235)
* Add delimiters, link \+.*more contributors, fixed size of avatars

* Put bg white *only* behind sticky column names

* Add 32px height to Tailwind config

* Track dashboard responsiveness  (#3236)

* Add responsivity tweaks

* Change sticky top breakpoint

--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -285,6 +285,21 @@
         @apply w-1-2;
     }
 
+    .sticky {
+        .record-name {
+            @apply mb-0;
+        }
+        .record-element {
+            @apply bg-white items-center;
+        }
+    }
+
+    .record-value {
+        strong {
+            @apply mt-8 xl:mt-0;
+        }
+    }
+
     .record-row {
         @apply flex justify-between lg:items-center;
         @apply lg:flex-row flex-col;
