--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -58,7 +58,7 @@
               before donating. We apologize for the inconvenience!
 
       %section.info-section.pt-48.lg:pt-0
-        %h2.text-h2.mb-32 Here’s what you can do to support us.
+        %h2.text-h2.mb-32 Here&apos;s what you can do to support us.
         .flex.flex-row.shadow-baseZ1.p-24.rounded-16.bg-white.mb-16.border-2.border-gradient.relative
           = graphical_icon "money-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
           .flex.flex-col
@@ -76,7 +76,7 @@
           .flex.flex-col
             .text-h4.mb-4 Get your company involved
             .text-prose.text-textColor5
-              Does your company support not-for-profits or charities? Do you have a matched giving scheme at work? We’d love to chat to you to understand how your company could support us. Please
+              Does your company support not-for-profits or charities? Do you have a matched giving scheme at work? We&apos;d love to chat to you to understand how your company could support us. Please
               drop us an email at
               = link_to "fundraising@exercism.org", "mailto:fundraising@exercism.org", class: "text-lightBlue font-medium underline"
               and we'll explore further!
