Replace noopener to noreferrer

--- a/app/views/about/hiring_content.html.haml
+++ b/app/views/about/hiring_content.html.haml
@@ -36,7 +36,7 @@
         Our online platform is centred around self-directed learning and volunteer mentoring, and has nearly one million members.
         Over the next 5 years, we want to become the defacto programming education platform that anyone, anywhere can use for free.
         Through our work we aim to improve the global standard of programming and increase participation in tech from under-represented groups.
-        You can learn more about Exercism in our #{link_to '"About Exercism" pages', 'https://exercism.org/about', target: '_blank', rel: :noopener}.
+        You can learn more about Exercism in our #{link_to '"About Exercism" pages', 'https://exercism.org/about', target: '_blank', rel: :noreferrer}.
       %p.text-p-xlarge.mb-16
         At the heart of Exercism is our content.
         We currently have thousands of programming exercises across over 50 programming languages, designed to teach and enable practice of programming concepts, nearly all of which has been written by our volunteer community.
