--- a/app/views/about/hiring_front_end_developer.html.haml
+++ b/app/views/about/hiring_front_end_developer.html.haml
@@ -35,7 +35,7 @@
         Our online platform is centred around self-directed learning and volunteer mentoring, and has nearly one million members.
         Over the next 5 years, we want to become the defacto programming education platform that anyone, anywhere can use for free.
         Through our work we aim to improve the global standard of programming and increase participation in tech from under-represented groups.
-        You can learn more about Exercism in our #{link_to '"About Exercism" pages', 'https://exercism.org/about', target: '_blank', rel: :noopener}.
+        You can learn more about Exercism in our #{link_to '"About Exercism" pages', 'https://exercism.org/about', target: '_blank', rel: :noreferrer}.
       %p.text-p-xlarge.mb-16
         Exercism is a complex, highly-technical platform, with production code running in over 40 languages.
         From our users' perspective, however, it's an easy-to-use website that helps them improve their programming skills.
@@ -112,7 +112,7 @@
       %ul.text-p-xlarge.mb-16
         %li Able to work at least 4 hours per day during 9am - 6pm UTC, to enable you to interact with the rest of the team.
         %li You are willing to travel once per year for an in-person meetup.
-        %li You are comfortable speaking English, and could write English to a level similar to <a href="https://github.com/exercism/elixir/blob/main/exercises/concept/lasagna/.docs/introduction.md" target="_blank" rel="noopener">this</a>.
+        %li You are comfortable speaking English, and could write English to a level similar to <a href="https://github.com/exercism/elixir/blob/main/exercises/concept/lasagna/.docs/introduction.md" target="_blank" rel="noreferrer">this</a>.
         %li You are excited to work in a diverse, inclusive team that cares about culture and where honest, empathic communication is the norm, and self-improvement is a lived value.
 
       %p.text-p-xlarge.mb-40
