--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -86,8 +86,8 @@
             .text-h4.mb-4 Love Exercism? Tell others about us!
             .text-prose.text-textColor5
               Follow us on
-              = link_to 'Twitter,', 'https://twitter.com/exercism_io', target: "_blank", rel: 'noopener', class: "text-lightBlue font-medium underline"
-              = link_to 'GitHub', 'https://github.com/exercism', target: "_blank", rel: 'noopener', class: "text-lightBlue font-medium underline"
+              = link_to 'Twitter,', 'https://twitter.com/exercism_io', target: "_blank", rel: 'noreferrer', class: "text-lightBlue font-medium underline"
+              = link_to 'GitHub', 'https://github.com/exercism', target: "_blank", rel: 'noreferrer', class: "text-lightBlue font-medium underline"
               and
-              = link_to 'LinkedIn', 'https://www.linkedin.com/company/exercism/', target: "_blank", rel: 'noopener', class: "text-lightBlue font-medium underline"
+              = link_to 'LinkedIn', 'https://www.linkedin.com/company/exercism/', target: "_blank", rel: 'noreferrer', class: "text-lightBlue font-medium underline"
               then share our posts, and create your own! We try to share everything we see 🙂
