--- a/app/views/tracks/exercises/show.html.haml
+++ b/app/views/tracks/exercises/show.html.haml
@@ -50,7 +50,7 @@
       %section.extra-info
         .updated-at Last updated #{@exercise.updated_at.strftime('%e %B %Y')}
 
-        = link_to "https://github.com/exercism/#{@track.slug}/tree/main/exercises/#{@exercise.git_type}/#{@exercise.slug}", target: "_blank", rel: 'noopener' do
+        = link_to "https://github.com/exercism/#{@track.slug}/tree/main/exercises/#{@exercise.git_type}/#{@exercise.slug}", target: "_blank", rel: 'noreferrer' do
           = graphical_icon "external-site-github", css_class: "github-icon"
           %span Edit via GitHub
           = icon "external-link", "The link opens in a new window or tab", css_class: "action-icon"
