--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -43,22 +43,22 @@
             = image_tag "team/katrina.jpg", alt: "An image of Katrina", class: "avatar"
             .details
               %h3
-                = link_to "Katrina Owen", "https://exercism.github.io/kytrinyx/", target: "_blank", rel: 'noopener'
+                = link_to "Katrina Owen", "https://exercism.github.io/kytrinyx/", target: "_blank", rel: 'noreferrer'
               .handle Co-founder &amp; Director
               %p Katrina is the original creator of Exercism. She is co-author of #{link_to '99 Bottles of OOP', 'https://sandimetz.com/99bottles'}. Polyglot developer and Ruby Hero award winner, with a degree in Molecular Biology. Cares deeply about open-source and contributes to several projects outside of Exercism.
               %ul.links
                 %li
-                  = link_to "https://exercism.github.io/kytrinyx/", target: "_blank", rel: 'noopener' do
+                  = link_to "https://exercism.github.io/kytrinyx/", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "link"
                     %span Katrina's Personal Site
 
                 %li
-                  = link_to "https://github.com/kytrinyx", target: "_blank", rel: 'noopener' do
+                  = link_to "https://github.com/kytrinyx", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-github"
                     %span GitHub
 
                 %li
-                  = link_to "https://twitter.com/kytrinyx", target: "_blank", rel: 'noopener' do
+                  = link_to "https://twitter.com/kytrinyx", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
 
@@ -66,22 +66,22 @@
             = image_tag "team/jeremy-walker.jpg", alt: "An image of Jeremy Walker", class: "avatar"
             .details
               %h3
-                = link_to "Jeremy Walker", "https://ihid.info", target: "_blank", rel: 'noopener'
+                = link_to "Jeremy Walker", "https://ihid.info", target: "_blank", rel: 'noreferrer'
               .handle Co-founder &amp; CEO
               %p Jeremy is an entrepreneur and software developer, who's passionate about equality and opportunity. He has co-founded various organisations, including Meducation, Wondr Medical, and #{link_to 'Kaido', 'https://kaido.org'}, and holds a patent for AI used in heart surgery.
               %ul.links
                 %li
-                  = link_to "https://ihid.info", target: "_blank", rel: 'noopener' do
+                  = link_to "https://ihid.info", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "link"
                     %span Jeremy's Personal Site
 
                 %li
-                  = link_to "https://github.com/iHiD", target: "_blank", rel: 'noopener' do
+                  = link_to "https://github.com/iHiD", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-github"
                     %span GitHub
 
                 %li
-                  = link_to "https://twitter.com/iHiD", target: "_blank", rel: 'noopener' do
+                  = link_to "https://twitter.com/iHiD", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
 
@@ -96,88 +96,88 @@
             = image_tag "team/erik.jpg", alt: "An image of Erik Schierboom", class: "avatar"
             .details
               %h3
-                = link_to "Erik Schierboom", "https://twitter.com/ErikSchierboom", target: "_blank", rel: 'noopener'
+                = link_to "Erik Schierboom", "https://twitter.com/ErikSchierboom", target: "_blank", rel: 'noreferrer'
               .handle Head of Open Source
               %p Erik is a polyglot developer who loves learning new languages. He builds the software and infrastructure that powers the open-source elements of the platform, ensuring each track is a joy to work with. He was a top Exercism volunteer before joining full-time.
               %ul.links
                 %li
-                  = link_to "https://www.erikschierboom.com", target: "_blank", rel: 'noopener' do
+                  = link_to "https://www.erikschierboom.com", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "link"
                     %span Erik's personal site
                 %li
-                  = link_to "https://github.com/erikschierboom", target: "_blank", rel: 'noopener' do
+                  = link_to "https://github.com/erikschierboom", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-github"
                     %span GitHub
                 %li
-                  = link_to "https://twitter.com/erikschierboom", target: "_blank", rel: 'noopener' do
+                  = link_to "https://twitter.com/erikschierboom", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
           .person
             = image_tag "team/taiyab.jpg", alt: "An image of Taiyab Raja", class: "avatar"
             .details
               %h3
-                = link_to "Taiyab Raja", "https://taiyab.co.uk/", target: "_blank", rel: 'noopener'
+                = link_to "Taiyab Raja", "https://taiyab.co.uk/", target: "_blank", rel: 'noreferrer'
               .handle UX/UI Designer
               %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
               %ul.links
                 %li
-                  = link_to "https://taiyab.co.uk", target: "_blank", rel: 'noopener' do
+                  = link_to "https://taiyab.co.uk", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "link"
                     %span Taiyab Raja's Portfolio
                 %li
-                  = link_to "https://twitter.com/taiyab", target: "_blank", rel: 'noopener' do
+                  = link_to "https://twitter.com/taiyab", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/taiyab", target: "_blank", rel: 'noopener' do
+                  = link_to "https://github.com/taiyab", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-github"
                     %span GitHub
           .person
             = image_tag "team/loretta.jpg", alt: "An image of Loretta Murray", class: "avatar"
             .details
               %h3
-                = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener'
+                = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noreferrer'
               .handle Head of Fundraising and Partnerships
               %p Loretta is motivated by the transformational power of fundraising and is a qualified business coach with a passion for developing fundraisers&apos; skills. Out of work she spends her time with family and friends, walking her two feisty little Border Terriers and reading.
               %ul.links
                 %li
-                  = link_to "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener' do
+                  = link_to "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/LorettaExercism", target: "_blank", rel: 'noopener' do
+                  = link_to "https://github.com/LorettaExercism", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-github"
                     %span GitHub
           .person
             = image_tag "team/jonathan.jpg", alt: "An image of Jonathan Middleton", class: "avatar"
             .details
               %h3
-                = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener'
+                = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noreferrer'
               .handle Community Manager
               %p Jonathan loves connecting with people and hearing stories of how people are where they are in life. He is curious to learn and has been slowly getting to grips with programming. He loves the outdoors and has a young family who live in the world's best city...Cape Town, South Africa.  Seeing people gain access to skills that empower and improve life is what drives him every day!
               %ul.links
                 %li
-                  = link_to "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener' do
+                  = link_to "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/jonathandmiddleton", target: "_blank", rel: 'noopener' do
+                  = link_to "https://github.com/jonathandmiddleton", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-github"
                     %span GitHub
           .person
             = image_tag "team/aron.jpg", alt: "An image of Aron Demeter", class: "avatar"
             .details
               %h3
-                = link_to "Áron Demeter", "https://github.com/dem4ron", target: "_blank", rel: 'noopener'
+                = link_to "Áron Demeter", "https://github.com/dem4ron", target: "_blank", rel: 'noreferrer'
               .handle Front-end Developer
               %p Áron is a self-taught developer who gets excited about discovering interrelations between things. He has a Master's degree in classical piano performance. In his freetime he enjoys spending time with his family, learning new languages on Exercism or listening to an opera.
               %ul.links
                 %li
-                  = link_to "https://twitter.com/d4ron1", target: "_blank", rel: 'noopener' do
+                  = link_to "https://twitter.com/d4ron1", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/dem4ron", target: "_blank", rel: 'noopener' do
+                  = link_to "https://github.com/dem4ron", target: "_blank", rel: 'noreferrer' do
                     = graphical_icon "external-site-github"
                     %span GitHub
 
