Add recaptcha to donations form (#3245)
* Use endless method in captcha

* Render recaptcha

* Fix recaptcha CSP warnings: https://developers.google.com/recaptcha/docs/faq

* Clean up useEffect

* Add method to user to check if user was github authenticated

* Pass in captcha requirement and recaptcha site key

* Position recaptcha div, add margin

* Add recaptcha component

* Add handlers

* Remove unused import

* Hide if captcha is not required

* Apply suggestions from code review

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Remove useLogger

* Add props to FormWithModal

* Use secret for recaptcha_site_key

* Add to other place too

* Fix captcha requirement for github authored users

* Fix rubocop

* Add explanation on form (#3248)

* Add explanation on form

* Change noopener to noreferrer (which implies noopener)

Co-authored-by: dem4ron <demaaron88@gmail.com>

* Use captcha_required?

* Include captcha required in cache

Co-authored-by: dem4ron <demaaron88@gmail.com>
Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/css/components/donations-form.css
+++ b/app/css/components/donations-form.css
@@ -163,4 +163,8 @@
             @apply text-13 leading-160 text-textColor6 text-center;
         }
     }
+
+    .g-recaptcha {
+        @apply h-[78px];
+    }
 }
