--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -63,7 +63,7 @@
           .flex.flex-col
             .text-h4.mb-4 Donate
             .text-prose.text-textColor5{ class: 'mr-[40px]' }
-              Support us finanically using the donation box
+              Support us financially using the donation box
               %span.hidden.md:inline to the right.
               %span.inline.md:hidden above.
               Every dollar helps us keep us independent, advert-free and able to grow, so please support us if you can! 💜
